# ChangeLog for dev-util/source-highlight
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/source-highlight/ChangeLog,v 1.1 2003/07/17 08:37:26 raker Exp $

*source-highlight-1.7 (17 Jul 2003)

  17 Jul 2003; Nick Hadaway <raker@gentoo.org> source-highlight-1.7.ebuild:
  New ebuild.  Thanks to Ryan Graham on bug #22066 for suggesting this
  package.