@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>no-herd</herd>
+<maintainer>
+  <email>dragonheart@gentoo.org</email>
+    <name>Daniel Black</name>
+    <description>A user ebuild that I felt obliged to include. Please take over if you want 
+it</description>
+</maintainer>
+<longdescription>
+This program, given a source file, produces a document with syntax highlighting</longdescription>
+</pkgmetadata>
