@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/source-highlight
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/source-highlight/ChangeLog,v 1.1 2003/07/17 08:37:26 raker Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/source-highlight/ChangeLog,v 1.2 2004/04/19 08:00:15 dragonheart Exp $
+
+*source-highlight-1.8 (19 Apr 2004)
+
+  19 Apr 2004; Daniel Black <dragonheart@gentoo.org> metadata.xml,
+  source-highlight-1.7.ebuild, source-highlight-1.8.ebuild:
+  version bump. Thanks to Joe Boyd <k963@bonbon.net> in bug #47354
 
 *source-highlight-1.7 (17 Jul 2003)
 
